<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/add_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_image"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_image"
            android:src="@drawable/placeholder_image"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:layout_below="@id/item_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_name"
            android:layout_below="@id/add_image_button"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_image_button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/name_label"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_amount"
            android:layout_below="@id/name_input"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_label"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/amount_label"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_input"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/add_price" />

        <EditText
            android:id="@+id/price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount_label"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/amount_label"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/item_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_description"
            android:layout_below="@id/price_input"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>


        <EditText
            android:id="@+id/item_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description_label"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:scrollbars="vertical"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@id/item_description_input"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

</ScrollView>